avoid horizontal scroll when canvas goes off the right of the screen

--- a/public/style.css
+++ b/public/style.css
@@ -112,6 +112,10 @@ body {
 body.rooms {
     color: white;
     text-align: center;
+
+    /* Hide the canvas going off to the right of the screen */
+    width: 100vw;
+    overflow: hidden;
 }
 
 body.rooms a, body.rooms a:visited {
